--- a/Smarty/Views/List.xaml
+++ b/Smarty/Views/List.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Smarty.Views.Add"
+    x:Class="Smarty.Views.List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Smarty.Views"
@@ -13,11 +13,24 @@
                     HorizontalAlignment="Center">
             <Viewbox MaxHeight="100"
                      MaxWidth="100">
-                <SymbolIcon Symbol="Add" />
+                <SymbolIcon Symbol="List" />
             </Viewbox>
             <TextBlock TextAlignment="Center"
-                       Text="Add"
+                       Text="Available Cars"
                        Margin="0,15,0,0" />
         </StackPanel>
+        <ListView x:Name="CarList">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <StackPanel>
+                            <TextBlock Text="{Binding Brand}"></TextBlock>
+                            <TextBlock Text="{Binding Model}"></TextBlock>
+                            <TextBlock Text="{Binding Color}"></TextBlock>
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
